Wed Jan 04 03:06:31 GMT 2006  Olly Betts <olly@survex.com>

	* docs/omegascript.txt,docs/overview.txt,query.cc: Added new feature
	  which allows you to avoid storing fieldnames in every document
	  (which can save a lot of disk space for a large database).  Instead
	  you just store the field values, one per line, and add something
	  like "$set{fieldnames,$split{caption sample url}}" to the
	  OmegaScript template to specify the fieldnames to use.
	* docs/omegascript.txt,query.cc: Add new "$split{}" command which
	  splits a string to give an OmegaScript list.
	* query.cc: Fix $url{} to escape "+" to "%2b".
	* query.cc: Speed up $highlight{} - only compare terms which are the
	  same length.

Tue Jan 03 22:38:01 GMT 2006  Olly Betts <olly@survex.com>

	* configfile.cc: Rename file_readable() to file_exists() to better
	  reflect what the function actually does!

Tue Jan 03 17:43:40 GMT 2006  Olly Betts <olly@survex.com>

	* templates/opensearch: Add missing escaping.

Mon Dec 19 10:27:30 GMT 2005  Olly Betts <olly@survex.com>

	* Makefile.am,commonhelp.cc,commonhelp.h,docs/overview.txt,omindex.cc,
	  scriptindex.cc: Add "--stemmer" option to omindex and scriptindex
	  to allow the stemming language to be set.
	* omindex.cc,scriptindex.cc: More consistent --help and --version
	  output.  Update FSF address.

Mon Dec 19 06:03:31 GMT 2005  Olly Betts <olly@survex.com>

	* query.cc: Explicitly use "unsigned char" when %-encoding in $url
	  so that top bit set characters are correctly handled on platforms
	  where char is signed by default.

Sun Dec 11 09:30:44 GMT 2005  Olly Betts <olly@survex.com>

	* templates/godmode: If a non-existant docid is specified, report the
	  error and prompt the user to enter another docid.  Fixes bug#60.

Sun Dec 11 09:27:18 GMT 2005  Olly Betts <olly@survex.com>

	* docs/cgiparams.txt,omega.cc,omega.h,query.cc: Add "SORTREVERSE"
	  CGI parameter which allows the sort order to be reversed when