@@ -1,9 +1,8 @@
 /* configfile.h: Read a config file for omega.
  *
- * ----START-LICENCE----
  * Copyright 2001 Lemur Consulting Ltd.
  * Copyright 2002 Ananova Ltd
- * Copyright 2003 Olly Betts
+ * Copyright 2003,2005 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -17,9 +16,8 @@
  *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+ * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301
  * USA
- * -----END-LICENCE-----
  */
 
 #ifndef HGUARD_OMEGA_CONFIGFILE
@@ -31,6 +29,7 @@ using std::string;
 extern string database_dir;
 extern string template_dir;
 extern string log_dir;
+extern string cdb_dir;
 
 void read_config_file();
 
