@@ -1,3 +1,4 @@
 database_dir /var/lib/omega/data
 template_dir /var/lib/omega/templates
 log_dir /var/log/omega
+cdb_dir /var/lib/omega/cdb
